--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "alt-utils": "^1.0.0",
     "node-uuid": "^1.4.7",
     "react": "^0.14.7",
+    "react-dnd": "^2.1.3",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.7"
   }
 }
