--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-survivejs-kanban": "^0.3.3",
     "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
     "npm-install-webpack-plugin": "^2.0.2",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.8.3"
@@ -34,6 +36,7 @@
     "react-addons-update": "^0.14.7",
     "react-dnd": "^2.1.3",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "react-router": "^2.2.4"
   }
 }
