--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kanban_app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.jsx",
   "scripts": {
     "build": "webpack",
     "start": "webpack-dev-server",
@@ -20,10 +20,11 @@
     "babel-preset-survivejs-kanban": "^0.3.3",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
-    "npm-install-webpack-plugin": "^2.0.2",
-    "style-loader": "^0.13.0",
+    "img-loader": "^1.2.2",
+    "npm-install-webpack-plugin": "^3.0.0",
+    "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
+    "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.8.3"
   },
@@ -37,6 +38,7 @@
     "react-dnd": "^2.1.3",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.7",
+    "react-fontawesome": "^0.3.3",
     "react-router": "^2.2.4"
   }
 }
